# maintainer-health

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: roadmap.md
docs/release-notes/: v0.1.0.md  v0.1.1.md  v0.2.0.md  v0.3.0.md  v0.4.0.md
examples/: minimal-report.json
src/maintainer_health/: __init__.py  __main__.py  audit.py  cli.py
tests/: test_audit.py  test_cli.py
